--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "tmlab-web-frontend",
+  "name": "tmlab-web-client",
   "version": "0.1.0",
   "owner": "Tmlab",
-  "author": "Talukanyani Mutshaeni",
+  "author": {
+    "name": "Talukanyani Mutshaeni",
+    "email": "tmutshaeni@hotmail.com"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -12,7 +15,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "nth-check": ">=2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
